# comp150project2template

MinVerse_Arcade/: .replit  game_constants.py  main.py  pyproject.toml  reset_db.py
MinVerse_Arcade/api/: ai.py  external.py
MinVerse_Arcade/database/: schema.sql
MinVerse_Arcade/docs/: README.md
MinVerse_Arcade/static/css/: enhanced.css  style.css
MinVerse_Arcade/static/js/: ai_trivia.js  boss_battle.js  clickmaster.js  coin_cruncher.js  coin_display.js  emoji_memory.js  fliptext.js  script.js  space_dodger.js  weather_wizard.js
MinVerse_Arcade/templates/: index.html  login.html  profile.html  register.html  victory.html
MinVerse_Arcade/templates/games/: ai_trivia.html  boss_battle.html  clickmaster.html  emoji_memory.html  fliptext.html  space_dodger.html  weather_wizard.html
instance/: database.db
static/: style.css
templates/: index.html
